[FIX]  navbar opens with the wrong size at first\n[FIX]  socialnav was moved to the bottom of navbar\n[FIX]  timeline visuals polish

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -11,8 +11,9 @@ h2 {
  * ------------------------------------- */
 #timeline {
   list-style: none;
-  margin: 50px 0 30px 120px;
-  margin-left: 200px;
+  /* margin: 50px 0 30px 120px; */
+  margin-right: 20px;
+  padding-left: 20px;
   border-left: 8px solid #7cdd99;
   width: 60%;
 }
@@ -27,23 +28,24 @@ p {
 }
 
 .date {
-  margin-top: -10px;
-  top: 50%;
-  left: -230px;
+  margin-top: -20px;
+  margin-left: 10px;
+  /* top: 50%; */
+  /* left: -230px; */
   font-size: 0.95em;
   line-height: 20px;
-  position: absolute;
+  /* position: absolute; */
   color: #2e704c;
   font-weight: 900;
 }
 
 .circle {
-  margin-top: -10px;
+  margin-top: -5px;
   top: 50%;
-  left: -54px;
+  left: -34px;
   width: 20px;
   height: 20px;
-  background: #48b379;
+  background: #3e6e4c;
   border: 8px solid #7cdd99;
   border-radius: 50%;
   display: block;
@@ -51,10 +53,11 @@ p {
 }
 
 .content {
+  margin-left: 10px;
   max-height: 20px;
   font-size: 20px;
   padding: 50px 30px 0;
-  border-color: transparent;
+  border-color: #7cdd99;
   border-width: 2px;
   border-style: solid;
   border-radius: 0.5em;
@@ -77,12 +80,13 @@ p {
   margin-top: -20px;
 }
 .content:after {
-  border-right-color: #48b379;
+  border-right-color: #7cdd99;
   border-width: 17px;
   top: 50%;
   margin-top: -17px;
 }
 .content p {
+  
   max-height: 0;
   color: transparent;
   text-align: justify;
@@ -96,8 +100,8 @@ p {
   position: absolute;
   z-index: 100;
   cursor: pointer;
-  margin-left: 10px;
-  /* top: 10px; */
+  margin-left: 20px;
+  top: 20px;
   padding-right: 10px;
   transition: transform 0.2s linear;
 }
@@ -108,14 +112,14 @@ p {
 
 .radio:checked + .relative .timelineTitle {
   cursor: auto;
-  transform: translateX(42px);
+  transform: translateX(22px);
 }
 .radio:checked + .relative .circle {
   background: #f98262;
 }
 .radio:checked ~ .content {
   max-height: 180px;
-  border-color: #48b379;
+  border-color: #7cdd99;
   margin-right: 20px;
   transform: translateX(20px);
   transition: max-height 0.4s linear, border-color 0.5s linear, transform 0.2s linear;
@@ -137,7 +141,7 @@ p {
   #timeline {
     margin-left: 0;
     padding-left: 0;
-    border-left: 8px solid transparent;
+    border-left: 8px solid #7cdd99;
   }
   #timeline .work {
     margin: 50px 0;
@@ -146,17 +150,19 @@ p {
   .timelineTitle {
     width: 85%;
     font-size: 1.1em;
-    white-space: nowrap;
+    /* word-wrap: break-word; */
+    /* white-space: nowrap; */
     text-overflow: ellipsis;
     overflow: hidden;
     display: block;
-    transform: translateX(18px);
+    margin-left: 35px;
+    /* transform: translateX(15px); */
   }
 
   .content {
     padding-top: 45px;
-    border-color: #48b379;
-
+    border-color: #7cdd99;
+    /* margin-left:20px; */
   }
   .content:before, .content:after {
     content: "";
@@ -174,7 +180,7 @@ p {
     margin-top: -20px;
   }
   .content:after {
-    border-right-color: #48b379;
+    border-right-color: #7cdd99;
     border-width: 17px;
     top: 50%;
     margin-top: -17px;
@@ -183,11 +189,11 @@ p {
     font-size: 0.9em;
     line-height: 1.4;
   }
-
+/* 
   .circle,
 .date {
     display: auto;
-  }
+  } */
 }
 
 /*# sourceMappingURL=timeline.css.map */
